2003-10-18 Christian Bayle <bayle@debian.org>
	
	* Applied various patch
	#547: Fix syntax typo of mailing_lists_create.php (Hidenari Miwa)
	#554: skills_utils.php missing a double quote     (Mitch Murphy )
	#550: Mandatory login for gforge remastered       (Ramon van Alteren)
	#540: Changes for Project Summary and Admin pages (Mathieu Peltier)
	#546: Fix of mail by Developer Profile page.      (Hidenari Miwa)
	#545: Tracker i18n                                (Hidenari Miwa)
	#544: Document manager i18n                       (Hidenari Miwa)
	#542: Bookmark page link                          (Hidenari Miwa)
	#475: PluginManager show comments before HTML (Vicente J. Ruiz Jurado)
	
2003-10-08 Tom Copeland  <tom@infoether.com>

	* www/mail/admin/index.php:
	Fixed bug [ #538 ] Password not sent for new mailing-lists

2003-10-05  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/languages/French.tab: Fixed truncated about_blurb on
	the homepage.

	* www/themes/osx/Theme.class: Localised Log In/Log Out/My Account/New
	Account texts for the OSX theme.

	* www/include/Layout.class: Use /etc/gforge/custom/index_std.php
	if it exists (patch #525 by Francisco Gimeno).

	* www/include/languages/Korean.tab, SimplifiedChinese.tab: Removed
	English strings.  They are unneeded, and since they're quite
	possibly outdated they can even be harmful since they override the
	default (up-to-date) English version.

	* www/include/languages/Esperanto.tab, Spanish.tab: Replaced HTML
	escape codes with proper UTF-8 encoded characters.

	* www/include/languages/Base.tab, French.tab: Fixed duplicate
	"Project Public Description" in the registration page: the first
	one should read "Project Purpose And Summarization".

2003-10-04  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/include/Layout.class: Replaced Log In/Log Out/My Account/New
	Account images with proper text (Gforge theme).  Easier to
	localise, easier to scale up, less ugly.
